fix: remove the ghost chevron

--- a/src/web-client/public/index.html
+++ b/src/web-client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Play Orlog, the game of Assassins Creed Valhalla!" />>
+  <meta name="description" content="Play Orlog, the game of Assassins Creed Valhalla!" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Orlog | The Viking Dice Game</title>
 </head>
