--- a/src/web-client/public/index.html
+++ b/src/web-client/public/index.html
@@ -8,6 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Play Orlog, the game of Assassins Creed Valhalla!" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Signika&display=swap" rel="stylesheet" />
+
   <title>Orlog | The Viking Dice Game</title>
 </head>
 
